Comment in scss

--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -65,8 +65,8 @@ h6 {
 .navbar .active {
 	color: #495464 !important;
 }
-.navbar .navbar-brand {
-}
+// .navbar .navbar-brand {
+// }
 .navbar .nav-item {
 	margin: 0 5px;
 	padding: 0;
@@ -316,8 +316,8 @@ h6 {
 .single-feature p {
 	font-size: 13px;
 }
-.icon-border {
-}
+// .icon-border {
+// }
 .icon-border span {
 	display: block;
 	position: relative;
