--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -58,6 +58,8 @@ h6 {
 }
 
 .navbar {
+  background: #fff;
+  box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.049803922);
   position: fixed;
   right: 0;
   left: 0;
@@ -81,7 +83,7 @@ h6 {
 }
 
 .navbar .nav-item a {
-  color: #fff;
+  color: #000;
   text-transform: uppercase;
   font-weight: 600;
   font-size: 13px;
@@ -108,43 +110,13 @@ h6 {
   display: none;
 }
 
-.nav-scroll {
-  background: #fff;
-  box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.0509803922);
-  transition: all 0.4s ease;
-}
-
-.nav-scroll .navbar-nav > li > a {
-  color: #333;
-}
-
-.nav-scroll .navbar-brand img {
-  transform: scale(1.03) !important;
-}
-
-.nav-scroll .navbar-toggler {
-  cursor: pointer;
-}
-
-.nav-scroll .navbar-toggler span {
-  color: #333;
-}
-
-.nav-scroll .nav-link:hover:after {
-  background-color: #2388ed;
-}
-
-.nav-scroll .active {
-  position: relative;
-}
-
 .logo-1 {
   height: 50px;
 }
 
 .banner {
   background: #BBBFCA;
-  background: linear-gradient(to left, #BBBFCA, #cd9ffa);
+  background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
   padding: 100px 0px;
   position: relative;
 }
@@ -157,12 +129,6 @@ h6 {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url(images/pattern.png);
-}
-
-.banner a.weblink {
-  color: #ffffff;
-  border-bottom: 1px dotted #ffffff;
 }
 
 .banner a:hover {
@@ -188,31 +154,13 @@ h6 {
   list-style: none;
 }
 
-.banner-text ul li {
-  display: inline-block;
-  margin: 0px 10px 10px 0px;
-}
-
 .banner-text ul li a {
   display: block;
+  text-decoration: none;
 }
 
-.banner-text ul li a img {
-  width: 150px;
-  border-radius: 7px;
-}
-
-.prelative {
-  position: relative;
-}
-
-.section-padding {
-  padding: 80px 0px;
-}
-
-.sectioner-header {
-  width: 69%;
-  margin: 0 auto;
+.banner-img {
+  border-radius: 20px;
 }
 
 .line {
@@ -231,6 +179,19 @@ h6 {
   height: 2px;
   border-bottom: 2px dashed #BBBFCA;
   margin-left: -75px;
+}
+
+.prelative {
+  position: relative;
+}
+
+.section-padding {
+  padding: 80px 0px;
+}
+
+.sectioner-header {
+  width: 69%;
+  margin: 0 auto;
 }
 
 .sectioner-header p {
@@ -253,7 +214,7 @@ h6 {
   height: 135px;
   border-radius: 100px;
   background: #BBBFCA;
-  background: linear-gradient(to left, #BBBFCA, #cd9ffa);
+  background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
   color: #ffffff;
   font-size: 50px;
   line-height: 135px;
@@ -294,63 +255,7 @@ h6 {
 }
 
 .video-overlay {
-  background: linear-gradient(to left, rgba(122, 96, 255, 0.9), rgba(205, 159, 250, 0.9));
-}
-
-.video-section h3 {
-  font-weight: 600;
-  font-size: 38px;
-}
-
-.video-section i {
-  display: block;
-  position: relative;
-  width: 70px;
-  height: 70px;
-  border-radius: 100px;
-  background: #ffffff;
-  color: #BBBFCA;
-  font-size: 30px;
-  line-height: 70px;
-  margin: 0 auto;
-  cursor: pointer;
-}
-
-.video-popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 99999;
-  background: rgba(0, 0, 0, 0.5);
-  display: none;
-  align-content: center !important;
-  -ms-flex-line-pack: center !important;
-  align-items: center !important;
-  justify-content: center !important;
-}
-
-.video-popup .video-src {
-  position: relative;
-  width: 700px;
-  max-width: 80%;
-}
-
-.video-popup .iframe-src {
-  width: 100%;
-  height: 0;
-  padding-top: 56.3%;
-  position: relative;
-  display: none;
-}
-
-.video-popup .iframe-src iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
 }
 
 .single-feature {
@@ -376,49 +281,10 @@ h6 {
   width: 50px;
   height: 50px;
   border-radius: 100px;
-  color: rgb(142, 30, 252);
+  color: rgb(73, 84, 100);
   font-size: 18px;
   line-height: 50px;
-  border: 1px solid rgb(142, 30, 252);
-}
-
-.team {
-  background: #fafafa;
-  border-top: 1px solid #e4e4e4;
-}
-
-.team-detail {
-  margin-top: 40px;
-}
-
-.team-detail img {
-  border-radius: 50%;
-  width: 70%;
-}
-
-.team-detail h4 {
-  color: rgb(142, 30, 252);
-  margin-top: 20px;
-  font-size: 17px;
-  margin-bottom: 0px;
-}
-
-.testimonial {
-  background: #BBBFCA;
-  background: linear-gradient(to left, #BBBFCA, #cd9ffa);
-  padding: 100px 0px;
-  position: relative;
-}
-
-.testimonial::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: url(images/pattern.png);
+  border: 1px solid rgb(73, 84, 100);
 }
 
 .bx-prev {
@@ -512,6 +378,23 @@ input {
   border: 0;
 }
 
+.contact {
+  background: #BBBFCA;
+  background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
+  padding: 100px 0px;
+  position: relative;
+}
+
+.contact::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 #contact_form textarea {
   resize: none;
   padding: 1rem;
@@ -569,7 +452,6 @@ input {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url(images/pattern.png);
 }
 
 .download ul {
@@ -656,12 +538,6 @@ input {
   .single-feature {
     margin-bottom: 20px;
     margin-top: 20px;
-  }
-  .team-detail {
-    margin-top: 20px;
-  }
-  .team-detail img {
-    width: 50%;
   }
   .bx-controls {
     display: none;
