Header, Footer, Banner in progress

--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -1,13 +1,12 @@
 @charset "UTF-8";
 @import url("https://use.typekit.net/zfl7ylc.css");
-/* @import "../node_modules/bootstrap/scss/bootstrap.scss"; */
 /* ------------GENERAL CSS------------- */
 *:focus {
   outline: none;
   margin: 0;
   padding: 0;
   box-sizing: border-box; /*Respetar los padding adicionales*/
-  font-family: "museo-slab", serif;
+  font-family: "museo-slab", "sans";
   font-weight: lighter;
 }
 
@@ -16,7 +15,7 @@ html {
   scroll-behavior: smooth;
 }
 
-/* ------------General Font weight------------- */
+/* ------------General Data------------- */
 h1,
 h2,
 h3,
@@ -24,41 +23,95 @@ p {
   font-weight: lighter;
 }
 
-a {
-  font-weight: lighter;
-}
-
-/* ------------ Index Start ------------- */
-a {
-  color: #495464;
-}
-
-a:hover {
-  color: #495464;
-}
-
 h1, h2, h3 {
   font-weight: 700;
 }
 
-h4, h5 {
-  font-weight: 600;
+a {
+  font-weight: lighter;
+  text-decoration: none;
+  animation: 1.5s ease 0s infinite pulse;
+  cursor: pointer;
 }
 
-h6 {
-  font-weight: 500;
+.footer {
+  padding: 20px;
+  letter-spacing: 5px;
 }
 
-.white {
-  color: #ffffff !important;
+.footer i {
+  letter-spacing: 20px;
+  justify-self: center;
 }
 
-.black {
-  color: #000000;
+h2 {
+  font-size: 25px;
 }
 
+h3 {
+  font-size: 23px;
+}
+
+.prelative {
+  position: relative;
+}
+
+.section-padding {
+  padding: 80px 0px;
+}
+
+.section-content {
+  margin-top: 80px;
+}
+
+.sectioner-header {
+  width: 69%;
+  margin: 0 auto;
+}
+
+.sectioner-header p {
+  font-size: 17px;
+}
+
+.sectioner-header {
+  width: 90%;
+}
+
+.sectioner-header p {
+  font-size: 14px;
+}
+
+.section-content {
+  margin-top: 40px;
+}
+
+.media-right-margin {
+  margin-right: 25px;
+}
+
+/*---- Headers Underline Start ----*/
+.line {
+  height: 2px;
+  width: 50px;
+  background: rgb(187, 191, 202);
+  display: block;
+  margin: 20px auto 20px;
+}
+
+.line::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  width: 150px;
+  height: 2px;
+  border-bottom: 2px dashed #BBBFCA;
+  margin-left: -75px;
+}
+
+/*---- Headers Underline End ----*/
+/* ------------ Index Start ------------- */
+/*---- Navbar Start----*/
 .navbar {
-  background: #fff;
   box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.049803922);
   position: fixed;
   right: 0;
@@ -70,11 +123,6 @@ h6 {
   line-height: 50px;
   background: transparent;
   z-index: 1030;
-  justify-content: space-evenly;
-}
-
-.navbar .active {
-  color: #495464 !important;
 }
 
 .navbar .nav-item {
@@ -83,14 +131,14 @@ h6 {
 }
 
 .navbar .nav-item a {
-  color: #000;
+  color: black;
   text-transform: uppercase;
   font-weight: 600;
   font-size: 13px;
 }
 
 .navbar .nav-item a:hover {
-  color: #495464;
+  color: rgb(73, 84, 100);
 }
 
 .navbar .nav-link {
@@ -103,7 +151,7 @@ h6 {
 }
 
 .navbar .navbar-toggler span {
-  color: #fff;
+  color: white;
 }
 
 .navbar-style2 .active:after, .navbar-style2 .nav-link:after {
@@ -114,8 +162,10 @@ h6 {
   height: 50px;
 }
 
+/*---- Navbar End ----*/
+/*---- Banner Start ----*/
 .banner {
-  background: #BBBFCA;
+  background: rgb(187, 191, 202);
   background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
   padding: 100px 0px;
   position: relative;
@@ -131,8 +181,24 @@ h6 {
   height: 100%;
 }
 
-.banner a:hover {
-  text-decoration: none;
+.banner-title {
+  color: white;
+  padding: 20px;
+}
+
+.banner-text {
+  padding-right: 80px;
+  margin: 50px 0px 0px;
+  margin: 40px 0px;
+}
+
+.banner-img {
+  border-radius: 20px;
+}
+
+.banner-text p {
+  margin: 25px 0px;
+  padding-bottom: 20px;
 }
 
 .svg-wave {
@@ -141,243 +207,13 @@ h6 {
   width: 100%;
 }
 
-.banner-text {
-  padding-right: 80px;
-  margin: 50px 0px 0px;
-}
-
-.banner-text p {
-  margin: 40px 0px;
-}
-
-.banner-text ul {
-  list-style: none;
-}
-
-.banner-text ul li a {
-  display: block;
-  text-decoration: none;
-}
-
-.banner-img {
-  border-radius: 20px;
-}
-
-.line {
-  height: 2px;
-  width: 50px;
-  background: #BBBFCA;
-  display: block;
-  margin: 20px auto 20px;
-}
-
-.line::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  width: 150px;
-  height: 2px;
-  border-bottom: 2px dashed #BBBFCA;
-  margin-left: -75px;
-}
-
-.prelative {
-  position: relative;
-}
-
-.section-padding {
-  padding: 80px 0px;
-}
-
-.sectioner-header {
-  width: 69%;
-  margin: 0 auto;
-}
-
-.sectioner-header p {
-  color: #818992;
-  font-size: 17px;
-}
-
-.section-content {
-  margin-top: 80px;
-}
-
-.icon-box {
-  margin-bottom: 50px;
-}
-
-.icon-box i {
-  display: block;
-  position: relative;
-  width: 135px;
-  height: 135px;
-  border-radius: 100px;
-  background: #BBBFCA;
-  background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
-  color: #ffffff;
-  font-size: 50px;
-  line-height: 135px;
-  margin: 0 auto;
-}
-
-.icon-box h5 {
-  margin-top: 30px;
-}
-
-.icon-box p {
-  color: #818992;
-  font-size: 14px;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.about-btn {
-  color: #BBBFCA;
-  padding: 10px 40px;
-  border: 2px solid #BBBFCA;
-  border-radius: 7px;
-  margin-top: 30px;
-  display: inline-block;
-  font-size: 18px;
-}
-
-.about-btn:hover {
-  background: #BBBFCA;
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.video-section {
-  background: url(images/video-bg.jpg) no-repeat fixed center;
-  background-size: cover;
-  overflow: hidden;
-}
-
+/*---- Banner End ----*/
+/*---- Travel Tips Background ----*/
 .video-overlay {
   background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
 }
 
-.single-feature {
-  margin-bottom: 80px;
-  margin-top: 40px;
-}
-
-.single-feature h5 {
-  font-size: 16px;
-}
-
-.media-right-margin {
-  margin-right: 25px;
-}
-
-.single-feature p {
-  font-size: 13px;
-}
-
-.icon-border span {
-  display: block;
-  position: relative;
-  width: 50px;
-  height: 50px;
-  border-radius: 100px;
-  color: rgb(73, 84, 100);
-  font-size: 18px;
-  line-height: 50px;
-  border: 1px solid rgb(73, 84, 100);
-}
-
-.bx-prev {
-  left: -90px !important;
-  background: url(images/arrow-left.png) no-repeat !important;
-  background-size: auto auto !important;
-  background-size: 100% 100% !important;
-}
-
-.bx-next {
-  right: -90px !important;
-  background: url(images/arrow-right.png) no-repeat !important;
-  background-size: auto auto !important;
-  background-size: 100% 100% !important;
-}
-
-.bx-wrapper {
-  border: none !important;
-  background: rgba(255, 255, 255, 0.81) !important;
-  border-radius: 5px !important;
-  box-shadow: none !important;
-}
-
-.slider-item {
-  padding: 20px;
-}
-
-.slider .test-img img {
-  border: 12px solid #fff;
-  border-radius: 50%;
-  width: 100%;
-  height: auto;
-}
-
-.test-img {
-  float: left;
-  width: 20%;
-  margin-right: 5%;
-}
-
-.test-text {
-  float: left;
-  width: 75%;
-}
-
-.slider .title {
-  display: block;
-  position: relative;
-  margin: 0 0 20px;
-  font-size: 1.125em;
-  line-height: 1.25;
-}
-
-.slider .title span {
-  display: block;
-  font-size: 1.5em;
-  font-weight: 700;
-}
-
-.faq {
-  background: #fafafa;
-  border-bottom: 1px solid #e4e4e4;
-}
-
-.faq-content {
-  margin: 20px 0px;
-}
-
-.faq-content h4 {
-  font-weight: 400;
-  font-size: 20px;
-}
-
-.faq-content p {
-  color: #818992;
-  font-weight: 300;
-  margin-top: 15px;
-}
-
-#contact_form .form-input {
-  border: 1px solid #e4e4e4;
-}
-
-input {
-  height: 42px;
-  padding: 0 1rem;
-  background: #fff;
-  border-radius: 30px;
-  margin-bottom: 1rem;
-  transition: all 0.3s ease-in-out;
-  border: 0;
-}
-
+/*---- Travel Tips Background ----*/
 .contact {
   background: #BBBFCA;
   background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
@@ -406,22 +242,11 @@ input {
   transition: all 0.3s ease-in-out;
 }
 
-.btn-grad {
-  padding: 0.7rem 2rem;
-  display: inline-block;
-  color: #fff;
-  border-radius: 2rem;
-  border: 0;
-  background: #BBBFCA;
-  background: linear-gradient(to left, #BBBFCA, #cd9ffa);
-  cursor: pointer;
-}
-
 .contact-info {
   padding: 2rem 2rem 1rem;
   border-radius: 8px;
   background: #BBBFCA;
-  background: linear-gradient(to left, #BBBFCA, #cd9ffa);
+  background: linear-gradient(to left, rgb(187, 191, 202), rgb(205, 159, 250));
 }
 
 .contact-item {
@@ -437,304 +262,36 @@ input {
   margin: 0;
 }
 
-.download {
-  background: #BBBFCA;
-  background: linear-gradient(to left, #BBBFCA, #cd9ffa);
-  padding: 100px 0px;
-  position: relative;
-}
-
-.download::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.download ul {
-  list-style: none;
-}
-
-.download ul li {
-  display: inline-block;
-  margin: 0px 10px 10px 0px;
-}
-
-.download ul li a {
-  display: block;
-}
-
-.download ul li a img {
-  width: 150px;
-  border-radius: 7px;
-}
-
-.footer-copy {
-  background: #ffffff;
-  color: #242424;
-  font-size: 13px;
-  text-align: center;
-  padding: 15px 0px;
-}
-
-.footer-copy p {
-  margin-bottom: 0px;
-}
-
-@media all and (max-width: 991px) {
+/*------ Media Query Navbar Start -------*/
+@media all and (max-width: 992px) {
   .navbar .navbar-collapse {
     overflow: auto;
-    background: rgb(213, 198, 221);
-    color: #fff !important;
+    background: rgba(187, 191, 202, 0.7);
+    color: white !important;
     text-align: center;
     padding: 10px 0;
-  }
-  .nav-scroll .navbar-collapse {
-    background: #fff !important;
   }
   #contact_form {
     margin-bottom: 20px;
   }
 }
 @media all and (max-width: 768px) {
-  .nav-scroll .navbar-brand img, .navbar-brand img {
-    transform: scale(0.75) !important;
-    -webkit-transform: scale(0.75) !important;
-  }
-  .banner-text {
+  .banner-content {
     padding-right: 0px;
+    padding-bottom: 20px;
     margin: 10px 0px 0px;
   }
-  h2 {
-    font-size: 25px;
-  }
-  h3 {
-    font-size: 23px;
-  }
-  .section-padding {
-    padding: 40px 0px;
-  }
-  .banner-text p {
-    margin: 25px 0px;
-  }
-  .banner-text ul li a img {
-    width: 140px;
-    border-radius: 7px;
-  }
-  .sectioner-header {
-    width: 90%;
-  }
-  .sectioner-header p {
-    font-size: 14px;
-  }
-  .about-btn {
-    padding: 5px 30px;
-    margin-top: 0px;
-    font-size: 16px;
-  }
-  .single-feature {
-    margin-bottom: 20px;
-    margin-top: 20px;
-  }
-  .bx-controls {
-    display: none;
-  }
-  .bx-wrapper {
-    margin: 0px 20px !important;
-  }
-  .slider .test-img img {
-    margin: 0 auto;
-  }
-  .test-img {
-    float: none;
-    width: 200px;
-    height: 200px;
-    margin: 0 auto;
-  }
-  .test-text {
-    float: none;
-    width: 100%;
-    text-align: center;
-  }
-  .section-content {
-    margin-top: 40px;
-  }
-  .faq-content {
-    margin: 10px 0px;
-  }
-  .faq-content h4 {
-    font-size: 16px;
-  }
-  .faq-content p {
-    font-size: 13px;
-  }
+  /*------ Media Query Navbar Start -------*/
   #contact_form {
     margin-bottom: 20px;
   }
   .contact-item {
     font-size: 12px;
   }
-  .download ul li a img {
-    width: 120px;
-  }
-  .footer-copy p {
-    font-size: 10px;
-  }
 }
 /* ------------ Index End ------------- */
-/* ------------ Main Background ------------- */
-#background-video {
-  height: calc(100vh - 80px);
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  -o-object-fit: cover;
-     object-fit: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
-  opacity: 70%;
-}
-
-/* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 480px) {
-  #background-video {
-    height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    -o-object-fit: cover;
-       object-fit: cover;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
-    opacity: 70%;
-  }
-}
-/* ------------ Main Call Out ------------- */
-.call--img {
-  grid-area: img;
-}
-
-.call--title {
-  grid-area: title;
-}
-
-.call--par {
-  grid-area: par;
-}
-
-.call--button {
-  grid-area: button;
-}
-
-.call {
-  display: grid;
-  margin: 0 auto;
-  width: 80%;
-  grid-gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: "img title title" "img par par" "img  ......  button";
-  overflow: scroll;
-  padding-bottom: 20px;
-}
-
-.call h1 {
-  display: flex;
-  align-items: center;
-  justify-self: center;
-  color: #212A3E;
-}
-
-#call-image {
-  display: flex;
-  justify-self: center;
-  height: 400px;
-}
-
-.call p {
-  display: flex;
-  align-items: center;
-  font-size: 25px;
-  color: #33415c;
-  text-overflow: scroll;
-}
-
-.call a {
-  display: flex;
-  align-items: center;
-  justify-self: center;
-  align-self: center;
-  padding: 0.5rem 1rem 0.5rem 1rem;
-  background-color: hsl(220, 29%, 31%);
-  opacity: 0.8;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 2rem;
-}
-
-.call a:hover {
-  opacity: 1;
-}
-
-/* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 480px) {
-  .call {
-    display: block;
-    position: relative;
-    text-align: center;
-    background-color: hsla(0, 0%, 49%, 0.5);
-    margin-bottom: 20px;
-  }
-  #call-image {
-    visibility: hidden;
-  }
-  .call h1 {
-    position: absolute;
-    top: 20px;
-    left: 19px;
-  }
-  .call p {
-    position: absolute;
-    top: 90px;
-    text-overflow: scroll;
-    font-size: 17px;
-    text-align: left;
-    padding-left: 10px;
-  }
-  .call a {
-    position: absolute;
-    bottom: 3%;
-    left: 20px;
-  }
-}
-/* ------------To be Set Up Later On If Needed------------- */
-/* Media Query for low resolution  Tablets, Ipads */
-/* Media Query for Tablets Ipads portrait mode */
 /* ------------ Personalized Sections ------------- */
 /* ------------ ABOUT ME SECTION 1 CSS LEFT REUSE FORM PAGES------------- */
-#sec1 a {
-  text-decoration: none;
-  color: #f5f5dc;
-}
-
-#sec1-button a {
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #4f648d;
-}
-
 .about-section1 {
   display: flex;
   justify-content: center;
@@ -745,16 +302,16 @@ input {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  color: #fff;
+  color: black;
 }
 
 /* Media Query for Mobile Devices */
 @media (min-width: 360px) and (max-width: 480px) {
   .about-section1--img {
-    width: 350px;
+    width: 3 50px;
   }
-  .sec1-text {
-    width: 350px;
+  .about-text {
+    width: 3 50px;
   }
 }
 /* ------------ TRAVEL TIPS SECTION 2------------- */
@@ -840,7 +397,7 @@ input {
     display: block;
     position: relative;
     text-align: center;
-    height: 420px;
+    height: 4 20px;
   }
   #sec2-travel-vid-tip1 {
     position: absolute;
@@ -860,7 +417,7 @@ input {
 /* Media Query for Laptops and Desktops */
 /* Media Query for Large screens */
 /* ------------ GALLERY SECTION 3------------- */
-/* ------------ BS Carrousel Media Queries ------------- */
+/* ----- BS Carrousel Media Queries ----- */
 .d-flex {
   height: 53rem;
 }
@@ -895,28 +452,7 @@ input {
     height: 37rem;
   }
 }
-#sec3 a {
-  text-decoration: none;
-  color: #f5f5dc;
-}
-
 /* ------------ CONTACT ME SECTION 4 CSS FOR INDEX REUSED FROM THE PAGES CSS------------- */
-#sec4 a {
-  text-decoration: none;
-  color: #fff;
-}
-
-.sec4-contact a {
-  height: 100px;
-  text-decoration: none;
-  color: #fff;
-}
-
-/* ------------To be Set Up Later On If Needed------------- */
-/* Media Query for low resolution  Tablets, Ipads */
-/* Media Query for Tablets Ipads portrait mode */
-/* Media Query for Laptops and Desktops */
-/* Media Query for Large screens */
 /* ------------ PAGES CSS ------------- */
 /* -------------CONTACT ME REUSE FOR INDEX VIEW------------- */
 /*Body*/
@@ -924,6 +460,10 @@ input {
   background-image: url(../Media/fade.JPG);
   background-position: 0;
   background-size: auto;
+}
+
+#contact_form input {
+  border: 1px solid hsla(0, 0%, 89%, 0.5);
 }
 
 .box-main {
@@ -1049,13 +589,9 @@ section .container .py-4 {
   text-align: center;
   margin-bottom: 20px;
   background-size: cover;
-  /* Add this line */
   background-position: center center;
-  /* Add this line */
   background-repeat: no-repeat;
-  /* Add this line */
   background-attachment: fixed;
-  /* Add this line */
 }
 
 #hero .profile-img {
@@ -1240,14 +776,11 @@ section .container .py-4 {
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  /* Compensate for excess margin on outer gallery flex items */
   margin: -1rem -1rem;
 }
 
 .gallery-item {
-  /* Minimum width of 24rem and grow to fit available space */
   flex: 1 0 24rem;
-  /* Margin value should be half of grid-gap value as margins on flex items don't collapse */
   margin: 1rem;
   box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
   overflow: hidden;
@@ -1271,7 +804,7 @@ section .container .py-4 {
 @media (min-width: 360px) and (max-width: 480px) {
   .galeria {
     /* grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(4, 200px); */
+    grid-template-rows: repeat(4, $lg1); */
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(18, 200px);
   }
@@ -1404,14 +937,14 @@ section .container .py-4 {
   width: 40px;
   border-radius: 20px;
   background-color: #495464;
-  color: #fff;
+  color: white;
   position: fixed;
   right: 40px;
   bottom: 40px;
   text-align: center;
   line-height: 40px;
   font-size: 30px;
-  box-shadow: 0 0 5px #fff;
+  box-shadow: 0 0 5px white;
   transition: all 200ms ease-in-out;
 }
 
