--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -41,7 +41,6 @@ $lg3: 400px;
 html {
     scroll-behavior: smooth;
 }
-
 /* ------------General Data------------- */
 h1,
 h2,
@@ -57,8 +56,21 @@ a {
     text-decoration: none;
     animation: 1.5s ease 0s infinite pulse;
     cursor: pointer;
+    color: $color1;
+}
+.body {
+    height: -o-calc(100% - 65px);
+    /* opera */
+    height: -webkit-calc(100% - 65px);
+    /* google, safari */
+    height: -moz-calc(100% - 65px);
+    /* firefox */
+    background-color: #fafafa;
+    padding-top: $md3;
+    padding-bottom: $xs2;
 }
 .footer{
+    margin-top: $xs1;
     padding: $xs2;
     letter-spacing: 5px;
 }
@@ -87,15 +99,6 @@ h3 {
 }
 .sectioner-header p {
 	font-size: 17px;
-}
-.sectioner-header {
-	width: 90%;
-}
-.sectioner-header p {
-	font-size: 14px;
-}
-.section-content {
-	margin-top: $xs4;
 }
 .media-right-margin {
 	margin-right:25px;
@@ -205,12 +208,12 @@ h3 {
 }
 /*---- Banner End ----*/
 
-/*---- Travel Tips Background ----*/
+/*---- Travel Tips Background End----*/
 .video-overlay {
 	background: linear-gradient(to left, $color1 35%, $color2 46%);
 }
+/*---- Travel Tips Background End ----*/
 
-/*---- Travel Tips Background ----*/
 .contact {
 	background: #BBBFCA;
 	background: linear-gradient(to left, $color1 35%, $color2 46%);
@@ -256,6 +259,8 @@ h3 {
 	line-height: $xs2;
 	margin: 0;
 }
+
+
 /*------ Media Query Navbar Start -------*/
 @media all and (max-width:992px) {
 .navbar .navbar-collapse {
@@ -275,8 +280,7 @@ h3 {
         padding-bottom: $xs2;
         margin: $xs1 0px 0px;
     }
-    /*------ Media Query Navbar Start -------*/
-    
+    /*------ Media Query Navbar Start -------*/   
     #contact_form {
         margin-bottom:$xs2;
     }
@@ -485,67 +489,76 @@ h3 {
         height: 37rem;
     }
 }
-
 /* ------------ CONTACT ME SECTION 4 CSS FOR INDEX REUSED FROM THE PAGES CSS------------- */
-
 /* ------------ PAGES CSS ------------- */
-
 /* -------------CONTACT ME REUSE FOR INDEX VIEW------------- */
-
 /*Body*/
 .contactB {  
     background-image: url(../Media/fade.JPG);
-    background-position: 0;
-    background-size: auto;
-
+    background-size: cover;
 }
-#contact_form input{
-    border: 1px solid hsl(0, 0%, 89%,0.5);
+#contact_form {
+	margin-bottom:20px;
 }
-.box-main {
-    display: flex;
-    justify-content: center;
-    padding-top: $xs2;
-    color: #fff;
-    margin: auto;
-    height: 80%;
-    font-weight: bold;
+.contact-item {
+	font-size: 12px;
 }
-
-.text-big {
-    color: #fff;
-    font-size: $xs3;
-    text-align: center;
+#contact_form .form-input {
+	border: 1px solid #e4e4e4;
 }
-
-.h-primary {
-    color: #fff;
-    font-size: $xs2;
-    text-align: center;
-    padding-top: $xs2;
+input {
+	height: 42px;
+	padding: 0 1rem;
+	background: #fff;
+	border-radius: 30px;
+	margin-bottom: 1rem;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+	border:0;
 }
-
-.form-label {
-    color: #fff;
-    font-weight: bold;
+#contact_form textarea {
+	resize: none;
+	padding: 1rem;
+	height: 150px;
+	background: #fff;
+	border: 0;
+	border-radius: 30px;
+	margin-bottom: 1rem;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
-
-section .container .py-4 {
-    height: 100vh !important;
+.btn-grad {
+    padding: .7rem 2rem;
+	display: inline-block;
+	color: #fff;
+	border-radius: 2rem;
+	border: 0;
+	background: #7a60ff;
+	background: linear-gradient(to left, #7a60ff, #cd9ffa);
+	cursor:pointer;
+}
+.contact-info {
+	padding: 2rem 2rem 1rem;
+	border-radius: 8px;
+	background: #7a60ff;
+	background: linear-gradient(to left, #7a60ff, #cd9ffa);
+}
+.contact-item {
+	margin:23px 0px;
+}
+.contact-item i {
+	font-size: 20px;
+}
+.contact-item p {
+	line-height: 20px;
+	margin: 0;
 }
 
 /* -------------TRAVEL BLOG------------- */
-
-.travelbody {
-    height: -o-calc(100% - 65px);
-    /* opera */
-    height: -webkit-calc(100% - 65px);
-    /* google, safari */
-    height: -moz-calc(100% - 65px);
-    /* firefox */
-    padding: $xs2;
-    background: #f1f1f1;
-}
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
@@ -611,18 +624,6 @@ section .container .py-4 {
 }
 
 /* -------------ABOUT ME------------- */
-
-.aboutbody {
-    margin: 0;
-    margin-top: $sm1;
-    margin-bottom: $sm1;
-    height: -o-calc(100vh - 75px);
-    /* opera */
-    height: -webkit-calc(100vh - 75px);
-    /* google, safari */
-    height: -moz-calc(100vh - 75px);
-    /* firefox */
-}
 
 .about-section {
     border: 1px solid $color6;
@@ -805,16 +806,6 @@ section .container .py-4 {
 .item18 {
     background-image: url(../Media/Ishira.png);
 }
-.body {
-    height: -o-calc(100% - 65px);
-    /* opera */
-    height: -webkit-calc(100% - 65px);
-    /* google, safari */
-    height: -moz-calc(100% - 65px);
-    /* firefox */
-    background-color: #fafafa;
-}
-
 .container {
     max-width: 100rem;
     margin: 0 auto;
